--- a/default.env
+++ b/default.env
@@ -22,6 +22,8 @@ RAPID_SYNC_URL=
 # Doppelganger protection - set to "true" to enable. This will intentionally skip two epochs on client start, and attempt to
 # detect duplicates of the validator(s) already running. Note this is NOT foolproof, though it can be useful when moving a node
 DOPPELGANGER=false
+# Auto-pruning Nethermind is usually safe. Set this to true to enable auto-pruning, and to anything else to disable it
+AUTOPRUNE_NM=true
 
 # Secure web proxy - advanced use, please see instructions
 DOMAIN=example.com
