Allow user to stop ComposeV1 nag

--- a/default.env
+++ b/default.env
@@ -122,6 +122,8 @@ JWT_SECRET=
 # If you run a distributed setup, setting this to DISTRIBUTED=true
 # will stop the nag screens during ./ethd update
 DISTRIBUTED=
+# If you want to not get nagged about Compose V1, set this to anything but true
+COMPOSEV1_NAG=true
 # Authenticated execution client endpoint. This default uses the execution node container.
 EL_NODE=http://execution:8551
 # Consensus client address. This could be comma-separated for Lighthouse or Teku VC clients, with failover,
