--- a/.github/workflows/push.yml
+++ b/.github/workflows/push.yml
@@ -3,17 +3,25 @@ name: docker-compose-actions-workflow
 on:
   push:
   pull_request:
-    branches: [ main, dev ]
+    types: [opened, synchronize, labeled, unlabeled]
+    branches: [main]
 
 jobs:
-  test:
+  lint:
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v2
+      - uses: actions/checkout@v3
       - name: Lint sources
         run: |
           pip install pre-commit
           pre-commit run --all-files
+
+  test:
+    if: contains(github.event.pull_request.labels.*.name, 'run-test') || github.event_name == 'push'
+    needs: lint
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v3
       - name: Test ethd
         run: |
           cp default.env .env
