--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -7,8 +7,11 @@ on:
     branches: [main]
 
 jobs:
-  test:
-    if: contains(github.event.pull_request.labels.*.name, 'run-test') || github.event_name == 'push'
+  test-teku-besu:
+    if: |
+      contains(github.event.pull_request.labels.*.name, 'test teku-besu') ||
+      contains(github.event.pull_request.labels.*.name, 'test all') ||
+      github.event_name == 'push'
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v3
@@ -27,6 +30,24 @@ jobs:
       - name: Test Teku
         run: |
           ./.github/check-service.sh consensus
+      - name: Test Besu
+        run: |
+          ./.github/check-service.sh execution
+      - name: Set Teku/Besu w/ VC
+        run: |
+          source ./.github/helper.sh
+          COMPOSE_FILE=teku-cl-only.yml:teku-vc-only.yml:besu.yml
+          var=COMPOSE_FILE
+          set_value_in_env
+      - name: Start Teku/Besu
+        run: |
+          ./ethd up
+      - name: Test Teku CL
+        run: |
+          ./.github/check-service.sh consensus
+      - name: Test Teku VC
+        run: |
+          ./.github/check-service.sh validator
       - name: Test Besu
         run: |
           ./.github/check-service.sh execution
