--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -8,7 +8,7 @@ on:
 jobs:
   test-teku-besu:
     if: |
-      ${{ github.event.issue.pull_request }} && (
+      github.event.pull_request && (
       contains(github.event.comment.body, '/test-teku')||
       contains(github.event.comment.body, '/test-besu')||
       contains(github.event.comment.body, '/test-all') )
