--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -1,6 +1,7 @@
 name: docker-compose-actions-workflow
 
 on:
+  pull_request:
   issue_comment:
     types: [created, edited, deleted]
     branches: [main]
