--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -9,7 +9,7 @@ on:
 jobs:
   test-teku-besu:
     if: |
-      ${{ github.event.issue.pull_request }} && (
+      contains(github.event.comment.html_url, '/pull/') && (
       contains(github.event.comment.body, '/test-teku')||
       contains(github.event.comment.body, '/test-besu')||
       contains(github.event.comment.body, '/test-all') )
