--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -2,24 +2,19 @@ name: docker-compose-actions-workflow
 
 on:
   pull_request:
-    types: [opened]
   issue_comment:
-    types: [created]
+    types: [created, edited, deleted]
 
 jobs:
   test-teku-besu:
+    if: |
+      contains(github.event.comment.html_url, '/pull/') && (
+      contains(github.event.comment.body, '/test-teku')||
+      contains(github.event.comment.body, '/test-besu')||
+      contains(github.event.comment.body, '/test-all') )
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v3
-      - uses: khan/pull-request-comment-trigger@v1.1.0
-        id: check
-        with:
-          trigger: '/test-teku'
-          trigger: '/test-besu'
-          trigger: '/test-all'
-          reaction: rocket
-        env:
-          GITHUB_TOKEN: '${{ secrets.GITHUB_TOKEN }}'
       - name: Create .env file
         run: |
           cp default.env .env
