Run test on comment (#1260)
* Teku Besu test has a specific label

* Label to run all tests

* Try it with comments

* Just on comment

* How about now?

* Or now

* Iterate

* And once more

* Move branche

* no-branch

* 3rd party

* Revert "3rd party"

This reverts commit 953633dbffbeb4b0425c903f0dff3f7383c503ea.

--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -1,17 +1,17 @@
 name: docker-compose-actions-workflow
 
 on:
-  push:
   pull_request:
-    types: [opened, synchronize, labeled, unlabeled]
-    branches: [main]
+  issue_comment:
+    types: [created, edited, deleted]
 
 jobs:
   test-teku-besu:
     if: |
-      contains(github.event.pull_request.labels.*.name, 'test teku-besu') ||
-      contains(github.event.pull_request.labels.*.name, 'test all') ||
-      github.event_name == 'push'
+      contains(github.event.comment.html_url, '/pull/') && (
+      contains(github.event.comment.body, '/test-teku')||
+      contains(github.event.comment.body, '/test-besu')||
+      contains(github.event.comment.body, '/test-all') )
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v3
