--- a/.github/workflows/test-teku-besu.yml
+++ b/.github/workflows/test-teku-besu.yml
@@ -15,6 +15,11 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v3
+      - uses: ouzi-dev/commit-status-updater@v2
+      - if: always()
+        uses: ouzi-dev/commit-status-updater@v2
+        with:
+          status: "${{ job.status }}"
       - name: Create .env file
         run: |
           cp default.env .env
@@ -51,11 +56,3 @@ jobs:
       - name: Test Besu
         run: |
           ./.github/check-service.sh execution
-      - name: Set commit status
-        uses: myrotvorets/set-commit-status-action@master
-        if: always()
-        with:
-          sha: ${{ github.pull_request.head.sha }}
-          allowForks: true
-          token: ${{ secrets.GITHUB_TOKEN }}
-          status: ${{ job.status }}
