--- a/.github/workflows/test-lodestar-erigon.yml
+++ b/.github/workflows/test-lodestar-erigon.yml
@@ -1,15 +1,15 @@
-run-name: Test Teku and Besu
+run-name: Test Lodestar and Erigon
 
 on:
   issue_comment:
     types: [created, edited, deleted]
 
 jobs:
-  test-teku-besu:
+  test-lodestar-erigon:
     if: |
       github.event.issue.pull_request && (
-      contains(github.event.comment.body, '/test-teku')||
-      contains(github.event.comment.body, '/test-besu')||
+      contains(github.event.comment.body, '/test-lodestar')||
+      contains(github.event.comment.body, '/test-erigon')||
       contains(github.event.comment.body, '/test-all') )
     runs-on: ubuntu-latest
     steps:
@@ -22,44 +22,47 @@ jobs:
           sha: ${{ steps.comment-branch.outputs.head_sha }}
           token: ${{ secrets.GITHUB_TOKEN }}
           status: pending
-          context: Test Teku and Besu
+          context: Test Lodestar and Erigon
       - uses: actions/checkout@v3
         with:
           ref: ${{ steps.comment-branch.outputs.head_ref }}
       - name: Create .env file
         run: |
           cp default.env .env
-      - name: Set Teku/Besu
+      - name: Set Lodestar/Erigon
         run: |
           source ./.github/helper.sh
-          COMPOSE_FILE=teku.yml:besu.yml
+          COMPOSE_FILE=lodestar.yml:erigon.yml
           var=COMPOSE_FILE
           set_value_in_env
-      - name: Start Teku/Besu
+      - name: Start Lodestar/Erigon
         run: |
           ./ethd up
-      - name: Test Teku
+      - name: Test Lodestar CL
         run: |
           ./.github/check-service.sh consensus
-      - name: Test Besu
-        run: |
-          ./.github/check-service.sh execution
-      - name: Set Teku/Besu w/ VC
-        run: |
-          source ./.github/helper.sh
-          COMPOSE_FILE=teku-cl-only.yml:teku-vc-only.yml:besu.yml
-          var=COMPOSE_FILE
-          set_value_in_env
-      - name: Start Teku/Besu
-        run: |
-          ./ethd up
-      - name: Test Teku CL
-        run: |
-          ./.github/check-service.sh consensus
-      - name: Test Teku VC
+      - name: Test Lodestar VC
         run: |
           ./.github/check-service.sh validator
-      - name: Test Besu
+      - name: Test Geth
+        run: |
+          ./.github/check-service.sh execution
+      - name: Set Lodestar/Erigon w/ VC
+        run: |
+          source ./.github/helper.sh
+          COMPOSE_FILE=lodestar-cl-only.yml:lodestar-vc-only.yml:erigon.yml
+          var=COMPOSE_FILE
+          set_value_in_env
+      - name: Start Lodestar/Erigon
+        run: |
+          ./ethd up
+      - name: Test Lodestar CL
+        run: |
+          ./.github/check-service.sh consensus
+      - name: Test Lodestar VC
+        run: |
+          ./.github/check-service.sh validator
+      - name: Test Erigon
         run: |
           ./.github/check-service.sh execution
       - name: Set final commit status
@@ -69,4 +72,4 @@ jobs:
           sha: ${{ steps.comment-branch.outputs.head_sha }}
           token: ${{ secrets.GITHUB_TOKEN }}
           status: ${{ job.status }}
-          context: Test Teku and Besu
+          context: Test Lodestar and Erigon
