ethdo connects to the first CL in CL_NODE

--- a/ethdo.yml
+++ b/ethdo.yml
@@ -11,11 +11,10 @@ services:
       - ./.eth:/app/.eth
     environment:
       - NETWORK=${NETWORK}
+      - CL_NODE=${CL_NODE:-http://consensus:5052}
     entrypoint:
       - docker-entrypoint.sh
       - /app/ethdo
-      -  --connection
-      - http://consensus:5052
       - --allow-insecure-connections
     depends_on:
       - consensus
