--- a/nimbus-cl-only.yml
+++ b/nimbus-cl-only.yml
@@ -56,7 +56,7 @@ services:
       - --udp-port=${CL_P2P_PORT:-9000}
       - --max-peers=${CL_MAX_PEER_COUNT:-160}
       - --network=${NETWORK}
-      - --web3-url=${EL_NODE}
+      - --el=${EL_NODE}
       - --jwt-secret=/var/lib/nimbus/ee-secret/jwtsecret
       - --rest
       - --rest-address=0.0.0.0
@@ -78,6 +78,24 @@ services:
       - traefik.http.routers.${CL_HOST:-cl}lb.rule=Host(`${CL_LB:-cl-lb}.${DOMAIN}`)
       - traefik.http.routers.${CL_HOST:-cl}lb.tls.certresolver=letsencrypt
       - traefik.http.services.${CL_HOST:-cl}.loadbalancer.server.port=${CL_REST_PORT:-5052}
+
+  validator-exit:
+    profiles: ["tools"]
+    restart: "no"
+    image: nimbus:local
+    user: root
+    volumes:
+      - /etc/localtime:/etc/localtime:ro
+      - ./.eth/validator_keys:/validator_keys
+    entrypoint:
+      - validator-exit.sh
+      - /usr/local/bin/nimbus_beacon_node
+      - --log-level=${LOG_LEVEL}
+      - deposits
+      - exit
+      - --rest-url=http://consensus:5052
+      - --validator=
+
 volumes:
   nimbus-consensus-data:
   jwtsecret:
