--- a/default.env
+++ b/default.env
@@ -75,8 +75,8 @@ TRAEFIK_WEB_PORT=443
 TRAEFIK_WEB_HTTP_PORT=80
 # NOTE: If you configure EL_RPC_PORT or EL_WS_PORT then you should also add el-shared.yml to COMPOSE_FILE
 # Execution client RPC port, important when using el-shared.yml. Insecure, do not expose to Internet.
+# For Erigon, this is also the WS port
 EL_RPC_PORT=8545
-# Execution client WS port. Insecure, do not expose to Internet.
 # Execution client WS port. Insecure, do not expose to Internet.
 # Note that for Erigon, this needs to match EL_RPC_PORT *if* you use traefik, and only then
 # Do not change it for Erigon and el-shared.yml
