.env file comment about its existence

--- a/default.env
+++ b/default.env
@@ -1,3 +1,4 @@
+# The settings for eth-docker are in .env, use "nano .env". Don't edit default.env itself.
 # Client choice: See https://eth-docker.net/Usage/ClientSetup for available options
 COMPOSE_FILE=teku.yml:besu.yml:deposit-cli.yml
 # Set the ETH address that priority fees and MEV rewards should be sent to
