--- a/default.env
+++ b/default.env
@@ -60,7 +60,7 @@ BEACON_STATS_MACHINE=
 
 # IP of the host you want to use in Docker (in case host has several IPs)
 # Note if you set it, and only then, you MUST append a colon to the end, like 1.2.3.4: or [2001:1:2::3]:, to work around
-# a limitaton of compose V1, even when using compose V2
+# a limitation of compose V1, even when using compose V2
 HOST_IP=
 
 # P2P ports you will forward to your staking node. Adjust here if you are
