Cleaner ACME for CloudFlare

--- a/default.env
+++ b/default.env
@@ -29,8 +29,8 @@ AUTOPRUNE_NM=true
 # Secure web proxy - advanced use, please see instructions
 DOMAIN=example.com
 ACME_EMAIL=user@example.com
-CF_EMAIL=user@example.com
-CF_API_TOKEN=SECRETTOKEN
+CF_DNS_API_TOKEN=SECRETTOKEN
+CF_ZONE_API_TOKEN=
 AWS_PROFILE=myprofile
 AWS_HOSTED_ZONE_ID=myzoneid
 GRAFANA_HOST=grafana
