--- a/traefik-cf-v6.yml
+++ b/traefik-cf-v6.yml
@@ -49,7 +49,7 @@ services:
     image: oznu/cloudflare-ddns:latest
     restart: "unless-stopped"
     environment:
-      - API_KEY=${CF_API_TOKEN}
+      - API_KEY=${CF_DNS_API_TOKEN}
       - ZONE=${DOMAIN}
       - SUBDOMAIN=${DDNS_SUBDOMAIN}
       - PROXIED=${DDNS_PROXY}
@@ -61,7 +61,7 @@ services:
     image: oznu/cloudflare-ddns:latest
     restart: "unless-stopped"
     environment:
-      - API_KEY=${CF_API_TOKEN}
+      - API_KEY=${CF_DNS_API_TOKEN}
       - ZONE=${DOMAIN}
       - SUBDOMAIN=${DDNS_SUBDOMAIN}
       - PROXIED=${DDNS_PROXY}
