--- a/prysm.yml
+++ b/prysm.yml
@@ -138,6 +138,9 @@ services:
   create-wallet:
     profiles: ["tools"]
     restart: "no"
+    build:
+      target: validator
+      <<: *prysm-build
     image: prysm-validator:local
     user: prysmvalidator
     environment:
@@ -150,8 +153,11 @@ services:
   validator-exit:
     profiles: ["tools"]
     restart: "no"
-    user: prysmvalidator
+    build:
+      target: validator
+      <<: *prysm-build
     image: prysm-validator:local
+    user: prysmvalidator
     volumes:
       - prysmvalidator-data:/var/lib/prysm
       - /etc/localtime:/etc/localtime:ro
@@ -173,8 +179,11 @@ services:
   validator-backup:
     profiles: ["tools"]
     restart: "no"
-    user: root
+    build:
+      target: validator
+      <<: *prysm-build
     image: prysm-validator:local
+    user: root
     volumes:
       - prysmvalidator-data:/var/lib/prysm
       - ./.eth/validator_keys:/validator_keys
