--- a/grafana-cloud.yml
+++ b/grafana-cloud.yml
@@ -52,7 +52,7 @@ services:
     <<: *logging
 
   node-exporter:
-    image: quay.io/prometheus/node-exporter:latest
+    image: prom/node-exporter:latest
     command:
       - '--path.rootfs=/host'
       - '--path.procfs=/host/proc'
@@ -82,7 +82,7 @@ services:
 
   json-exporter:
     restart: "unless-stopped"
-    image: quay.io/prometheuscommunity/json-exporter
+    image: prometheuscommunity/json-exporter:latest
     volumes:
       - ./prometheus/json.yml:/config/json.yml
       - /etc/localtime:/etc/localtime:ro
