--- a/lodestar-cl-only.yml
+++ b/lodestar-cl-only.yml
@@ -7,15 +7,18 @@ x-logging: &logging
       max-file: "3"
       tag: '{{.ImageName}}|{{.Name}}|{{.ImageFullID}}|{{.FullID}}'
 
+x-build: &ls-build
+  context: ./lodestar
+  dockerfile: ${LS_DOCKERFILE}
+  args:
+    - BUILD_TARGET=${LS_SRC_BUILD_TARGET}
+    - DOCKER_TAG=${LS_DOCKER_TAG}
+
 services:
   consensus:
     restart: "unless-stopped"
     build:
-      context: ./lodestar
-      dockerfile: ${LS_DOCKERFILE}
-      args:
-        - BUILD_TARGET=${LS_SRC_BUILD_TARGET}
-        - DOCKER_TAG=${LS_DOCKER_TAG}
+      <<: *ls-build
     image: lodestar:local
     user: lsconsensus
     stop_grace_period: 1m
