--- a/lodestar.yml
+++ b/lodestar.yml
@@ -7,15 +7,18 @@ x-logging: &logging
       max-file: "3"
       tag: '{{.ImageName}}|{{.Name}}|{{.ImageFullID}}|{{.FullID}}'
 
+x-build: &ls-build
+  context: ./lodestar
+  dockerfile: ${LS_DOCKERFILE}
+  args:
+    - BUILD_TARGET=${LS_SRC_BUILD_TARGET}
+    - DOCKER_TAG=${LS_DOCKER_TAG}
+
 services:
   consensus:
     restart: "unless-stopped"
     build:
-      context: ./lodestar
-      dockerfile: ${LS_DOCKERFILE}
-      args:
-        - BUILD_TARGET=${LS_SRC_BUILD_TARGET}
-        - DOCKER_TAG=${LS_DOCKER_TAG}
+      <<: *ls-build
     image: lodestar:local
     user: lsconsensus
     stop_grace_period: 1m
@@ -71,6 +74,8 @@ services:
 
   validator:
     restart: "unless-stopped"
+    build:
+      <<: *ls-build
     image: lodestar:local
     user: lsvalidator
     environment:
@@ -118,6 +123,8 @@ services:
   validator-exit:
     profiles: ["tools"]
     restart: "no"
+    build:
+      <<: *ls-build
     image: lodestar:local
     user: lsvalidator
     volumes:
