--- a/nimbus-cl-only.yml
+++ b/nimbus-cl-only.yml
@@ -7,17 +7,20 @@ x-logging: &logging
       max-file: "3"
       tag: '{{.ImageName}}|{{.Name}}|{{.ImageFullID}}|{{.FullID}}'
 
+x-build: &nimbus-build
+  context: ./nimbus
+  dockerfile: ${NIM_DOCKERFILE}
+  args:
+    - BUILD_TARGET=${NIM_SRC_BUILD_TARGET}
+    - DOCKER_TAG=${NIM_DOCKER_TAG}
+    - DOCKER_VC_TAG=${NIM_DOCKER_VC_TAG}
+
 services:
   consensus:
     restart: "unless-stopped"
     build:
       target: consensus
-      context: ./nimbus
-      args:
-        - BUILD_TARGET=${NIM_SRC_BUILD_TARGET}
-        - DOCKER_TAG=${NIM_DOCKER_TAG}
-        - DOCKER_VC_TAG=${NIM_DOCKER_VC_TAG}
-      dockerfile: ${NIM_DOCKERFILE}
+      <<: *nimbus-build
     image: nimbus:local
     user: user
     stop_grace_period: 1m
@@ -79,9 +82,13 @@ services:
       - traefik.http.routers.${CL_HOST:-cl}lb.tls.certresolver=letsencrypt
       - traefik.http.services.${CL_HOST:-cl}.loadbalancer.server.port=${CL_REST_PORT:-5052}
 
+# Uses keystore-m file and CL, so does belong here
   validator-exit:
     profiles: ["tools"]
     restart: "no"
+    build:
+      target: consensus
+      <<: *nimbus-build
     image: nimbus:local
     user: root
     volumes:
